--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@
 	--clr-light-gray: #d1d1d1;
 	--clr-gray: #989898;
 	--clr-dark: #444;
-	--clr-accent: #ffa500;
+	--clr-accent: #018bba;
 	--clr-accent-dark: #e67e00;
 	--clr-accent-secondary: rgba(25, 83, 10, 0.5);
 	--clr-warning: #cc2121;
@@ -49,7 +49,11 @@ body {
 h2 {
 	color: #f17d80;
 	margin: 0;
-	text-align: center;
+	/* text-align: center; */
+}
+
+section {
+	width: 90vw;
 }
 
 section > article {
@@ -57,12 +61,13 @@ section > article {
 	justify-content: space-between;
 	min-width: 15rem;
 	color: white;
-	margin: 0.1rem;
-	background-color: #737495;
+	border-bottom: 1px solid var(--clr-accent);
+	/* margin: 0.1rem; */
+	/* background-color: #737495; */
 }
 
 article > div {
-	padding: 0.5rem;
+	padding: 2em 0.5rem;
 }
 
 article > div:nth-child(2) {
@@ -79,7 +84,7 @@ label {
 
 label span {
 	color: #737495;
-	width: 4.5rem;
+	width: 8.5rem;
 }
 
 input,
@@ -111,4 +116,8 @@ button {
 button:hover {
 	color: white;
 	background-color: #737495;
+}
+
+hr {
+	border: 1px solid red;
 }
