--- a/src/styles.css
+++ b/src/styles.css
@@ -132,12 +132,13 @@ form {
 	background-repeat: no-repeat;
 }
 
+.nav-container {
+	height: 300px;
+	background-color: red;
+}
+
 .footer {
-	background-image: linear-gradient(
-			var(--transparent-bg-light) 70%,
-			var(--transparent-bg-drk)
-		),
-		url("./images/bg-btm.jpg");
+	background-image: url("./images/bg-btm.jpg");
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
