--- a/src/styles.css
+++ b/src/styles.css
@@ -31,10 +31,12 @@
 	--clr-dark: #444;
 	--clr-accent: #018bba;
 	--clr-accent-dark: #004b64;
-	--clr-accent-secondary: rgba(25, 83, 10, 0.5);
-	--clr-warning: #cc2121;
+	--clr-accent-secondary: #ff0000;
+	--transparent-nav: rgba(255, 0, 0, 0.6);
 	--transparent-bg-drk: rgba(0, 14, 40, 1);
 	--transparent-bg-light: rgba(0, 14, 40, 0);
+
+	--clr-warning: #cc2121;
 }
 
 body {
@@ -69,24 +71,40 @@ h2 {
 }
 
 .nav-container {
-	padding: 100px 0 100px 100px;
+	padding: 6em 0 6em 6em;
 	display: flex;
+	align-items: center;
 }
 
 .nav-container img {
 	width: 10%;
 	margin-right: 4em;
+	display: flex;
 }
 
 .nav {
 	display: flex;
-	background-color: red;
+	align-items: center;
+	justify-content: space-between;
+	background-color: var(--transparent-nav);
 	width: 100%;
+	height: 6em;
 }
 
 .nav-items ul,
 .nav-login ul {
 	display: flex;
+	padding: 0 5em;
+	list-style: none;
+}
+
+.nav-items li,
+.nav-login li {
+	color: var(--clr-light);
+}
+
+a {
+	text-decoration: none;
 }
 
 section {
