--- a/src/styles.css
+++ b/src/styles.css
@@ -1,180 +1,212 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-	--fw-light: 300;
-	--fw-normal: 400;
-	--fw-semi: 500;
-	--fw-bold: 700;
-	--fs-h1: 1.8rem;
-	--fs-h2: 1.3rem;
-	--fs-h3: 1.1rem;
-	--fs-body: 1rem;
-	--ls-h2: 0.1em;
-	--btn-padding: 0.6em 1.5em;
-	--mgn-btm-none: 0;
-	--mgn-btm-sm: 0.8em;
-	--mgn-btm-md: 1.5em;
-	--mgn-btm-lg: 2em;
-	--mgn-btm-xlg: 3em;
-	--fs-xl: 4rem;
-	--clr-light: #fff;
-	--clr-light-gray: #d1d1d1;
-	--clr-gray: #989898;
-	--clr-dark: #444;
-	--clr-accent: #018bba;
-	--clr-accent-dark: #004b64;
-	--clr-accent-secondary: #ff0000;
-	--transparent-nav: rgba(255, 0, 0, 0.6);
-	--transparent-bg-drk: rgba(0, 14, 40, 1);
-	--transparent-bg-light: rgba(0, 14, 40, 0);
-
-	--clr-warning: #cc2121;
+  --fw-light: 300;
+  --fw-normal: 400;
+  --fw-semi: 500;
+  --fw-bold: 700;
+  --fs-h1: 1.8rem;
+  --fs-h2: 1.3rem;
+  --fs-h3: 1.1rem;
+  --fs-body: 1rem;
+  --ls-h2: 0.1em;
+  --btn-padding: 0.6em 1.5em;
+  --mgn-btm-none: 0;
+  --mgn-btm-sm: 0.8em;
+  --mgn-btm-md: 1.5em;
+  --mgn-btm-lg: 2em;
+  --mgn-btm-xlg: 3em;
+  --fs-xl: 4rem;
+  --clr-light: #fff;
+  --clr-light-gray: #d1d1d1;
+  --clr-gray: #989898;
+  --clr-dark: #444;
+  --clr-accent: #018bba;
+  --clr-accent-dark: #004b64;
+  --clr-accent-secondary: #ff0000;
+  --transparent-nav: rgba(255, 0, 0, 0.6);
+  --transparent-bg-drk: rgba(0, 14, 40, 1);
+  --transparent-bg-light: rgba(0, 14, 40, 0);
+  --clr-dark-bg: #000e28;
+  --clr-warning: #cc2121;
 }
 
 body {
-	font-family: "Montserrat", sans-serif;
-	line-height: 1.6;
-	color: var(--clr-light);
-	font-weight: var(--fw-light);
-}
-
-h2 {
-	letter-spacing: var(--ls-h2);
-}
-
-.container {
-	background-color: #000e28;
-	width: 100vw;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
-
-.header {
-	background-image: linear-gradient(
-			var(--transparent-bg-light) 70%,
-			var(--transparent-bg-drk)
-		),
-		url("./images/bg-top.jpg");
-	width: 100%;
-	height: 100vh;
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-
-.nav-container {
-	padding: 6em 0 6em 6em;
-	display: flex;
-	align-items: center;
-}
-
-.nav-container img {
-	width: 10%;
-	margin-right: 4em;
-	display: flex;
-}
-
-.nav {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	background-color: var(--transparent-nav);
-	width: 100%;
-	height: 6em;
-}
-
-.nav-items ul,
-.nav-login ul {
-	display: flex;
-	padding: 0 5em;
-	list-style: none;
-}
-
-.nav-items li,
-.nav-login li {
-	color: var(--clr-light);
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.6;
+  color: var(--clr-light);
+  font-weight: var(--fw-light);
+  background-color: var(--clr-dark-bg);
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
+}
+
+.container {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header {
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(70%, var(--transparent-bg-light)), to(var(--transparent-bg-drk))), url("./images/bg-top.jpg");
+  background-image: linear-gradient(var(--transparent-bg-light) 70%, var(--transparent-bg-drk)), url("./images/bg-top.jpg");
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.nav-container {
+  padding: 6em 0 6em 6em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-container .nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: var(--transparent-nav);
+  width: 100%;
+  height: 5.5em;
+  font-size: var(--fs-h3);
+  padding: 0 2em;
+}
+
+.nav-container .nav a {
+  color: var(--clr-light);
+  padding: 0 2em;
+}
+
+.nav-container .nav .nav-login {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: var(--fw-semi);
+  text-transform: uppercase;
+}
+
+.nav-container img {
+  width: 10%;
+  margin-right: 4em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 section {
-	width: 90vw;
+  width: 90vw;
+}
+
+.vl {
+  border-left: 1px solid var(--clr-light);
+  height: 2.5em;
 }
 
 section > article {
-	display: flex;
-	justify-content: space-between;
-	/* min-width: 15rem; */
-	/* color: white; */
-	border-bottom: 1px solid var(--clr-accent);
-	/* margin: 0.1rem; */
-	/* background-color: #737495; */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  /* min-width: 15rem; */
+  /* color: white; */
+  border-bottom: 1px solid var(--clr-accent);
+  /* margin: 0.1rem; */
+  /* background-color: #737495; */
 }
 
 article > div {
-	padding: 2em 0.5rem;
+  padding: 2em 0.5rem;
 }
 
 label {
-	display: flex;
-	align-items: center;
-	margin-top: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 0.5rem;
 }
 
 label span {
-	color: #737495;
-	width: 8.5rem;
+  color: #737495;
+  width: 8.5rem;
 }
 
 input,
 select {
-	width: 100%;
-	font-size: 1rem;
-	padding: 0.8rem 1rem;
-	color: #f17d80;
-	border: 1px solid var(--clr-accent-dark);
-	border-radius: 0.2em;
-	outline: none;
-	-webkit-appearance: none;
-	margin-bottom: var(--mgn-btm-sm);
-	background-color: transparent;
+  width: 100%;
+  font-size: 1rem;
+  padding: 0.8rem 1rem;
+  color: #f17d80;
+  border: 1px solid var(--clr-accent-dark);
+  border-radius: 0.2em;
+  outline: none;
+  -webkit-appearance: none;
+  margin-bottom: var(--mgn-btm-sm);
+  background-color: transparent;
 }
 
 button {
-	display: block;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1rem;
-	margin: 0.5rem 0 0 auto;
-	padding: 0.4rem;
-	background-color: #f17d80;
-	color: white;
-	border: none;
-	outline: none;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  margin: 0.5rem 0 0 auto;
+  padding: 0.4rem;
+  background-color: #f17d80;
+  color: white;
+  border: none;
+  outline: none;
 }
 
 button:hover {
-	color: white;
-	background-color: #737495;
+  color: white;
+  background-color: #737495;
 }
 
 form {
-	margin: 4em 0;
+  margin: 4em 0;
 }
 
 .footer {
-	background-image: url("./images/bg-btm.jpg");
-	width: 100%;
-	height: 100vh;
-	background-size: cover;
-	background-repeat: no-repeat;
+  background-image: url("./images/bg-btm.jpg");
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+/*# sourceMappingURL=styles.css.map */
