--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
 }
 
 :root {
+  --ff-body: "Montserrat", sans-serif;
   --fw-light: 300;
   --fw-normal: 400;
   --fw-semi: 500;
@@ -17,7 +18,7 @@
   --fs-h2: 1.3rem;
   --fs-h3: 1.1rem;
   --fs-body: 1rem;
-  --ls-h2: 0.1em;
+  --ls-body: 0.1em;
   --btn-padding: 0.6em 1.5em;
   --mgn-btm-none: 0;
   --mgn-btm-sm: 0.8em;
@@ -25,13 +26,16 @@
   --mgn-btm-lg: 2em;
   --mgn-btm-xlg: 3em;
   --fs-xl: 4rem;
+  --bdr-radius: 0.3em;
   --clr-light: #fff;
   --clr-light-gray: #d1d1d1;
+  --clr-input: #dddcdc;
   --clr-gray: #989898;
   --clr-dark: #444;
   --clr-accent: #018bba;
   --clr-accent-dark: #004b64;
   --clr-accent-secondary: #ff0000;
+  --clr-accent-secondary-drk: #920000;
   --transparent-nav: rgba(204, 0, 0, 0.6);
   --transparent-bg-drk: rgba(0, 14, 40, 1);
   --transparent-bg-light: rgba(0, 14, 40, 0);
@@ -40,11 +44,22 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--ff-body);
   line-height: 1.6;
+  letter-spacing: var(--ls-body);
   color: var(--clr-light);
   font-weight: var(--fw-light);
   background-color: var(--clr-dark-bg);
+}
+
+h1,
+.h1 {
+  font-size: var(--fs-h1);
+}
+
+h2,
+.h2 {
+  font-size: var(--fs-h2);
 }
 
 a {
@@ -75,13 +90,14 @@ a {
 }
 
 .nav-container {
-  padding: 6em 0 6em 6em;
+  padding: 4em 0 6em 6em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 23em;
 }
 
 .nav-container .nav {
@@ -96,7 +112,7 @@ a {
           justify-content: space-between;
   background-color: var(--transparent-nav);
   width: 100%;
-  height: 5.5em;
+  height: 5em;
   font-size: var(--fs-h3);
   padding: 0 4em;
 }
@@ -127,12 +143,16 @@ a {
 
 .btn {
   cursor: pointer;
-  display: block;
-  padding: 1em;
-  background-color: var(--clr-accent-secondary);
+  padding: 1.2em 4em;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(40%, var(--clr-accent-secondary)), to(var(--clr-accent-secondary-drk)));
+  background-image: linear-gradient(var(--clr-accent-secondary) 40%, var(--clr-accent-secondary-drk));
   color: white;
+  font-weight: var(--fw-semi);
+  letter-spacing: var(--ls-body);
   border: none;
   outline: none;
+  border-radius: var(--bdr-radius);
+  text-transform: uppercase;
 }
 
 .btn :hover {
@@ -140,22 +160,27 @@ a {
   background-color: red;
 }
 
-.signup {
+.signup-container {
   margin: 0 auto;
-  width: 40vw;
+  width: 50vw;
 }
 
-.signup .signup-form {
+.signup-container p {
+  margin-bottom: 1.5em;
+}
+
+.signup-container .signup-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 0 5em;
 }
 
-.signup input {
+.signup-container input {
   margin: 0;
 }
 
-.signup .btn-signup {
+.signup-container .btn-signup {
   margin-left: 2em;
 }
 
@@ -201,15 +226,35 @@ label span {
   width: 8.5rem;
 }
 
+.input-primary,
+.select-primary {
+  font-family: var(--ff-body);
+  color: var(--clr-input);
+  font-weight: var(--fw-light);
+  width: 100%;
+  font-size: 0.8rem;
+  padding: 0.8rem 1rem;
+  background-color: var(--clr-light);
+  border-radius: var(--bdr-radius);
+  -webkit-appearance: none;
+  margin-bottom: var(--mgn-btm-sm);
+}
+
+span {
+  text-transform: uppercase;
+  color: var(--clr-accent-secondary);
+  font-weight: var(--fw-bold);
+}
+
 input,
 select {
   width: 100%;
   font-size: 1rem;
+  letter-spacing: var(--ls-body);
   padding: 0.8rem 1rem;
   color: #f17d80;
   border: 1px solid var(--clr-accent-dark);
-  border-radius: 0.2em;
-  outline: none;
+  border-radius: var(--bdr-radius);
   -webkit-appearance: none;
   margin-bottom: var(--mgn-btm-sm);
   background-color: transparent;
