--- a/src/styles.css
+++ b/src/styles.css
@@ -114,7 +114,26 @@ a {
   width: 100%;
   height: 5em;
   font-size: var(--fs-h3);
-  padding: 0 4em;
+  padding: 0 3em;
+}
+
+.nav-container .nav .nav-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-container .nav .nav-items input {
+  width: unset;
+  margin: 0;
+  padding: 0.8rem 4em;
+}
+
+.nav-container .nav a:nth-child(1) {
+  padding-left: 0;
 }
 
 .nav-container .nav a {
@@ -134,7 +153,7 @@ a {
 }
 
 .nav-container img {
-  width: 10%;
+  width: 9%;
   margin-right: 4em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -238,6 +257,7 @@ label span {
   border-radius: var(--bdr-radius);
   -webkit-appearance: none;
   margin-bottom: var(--mgn-btm-sm);
+  border: none;
 }
 
 span {
