--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,7 +99,19 @@ a {
 		width: 100%;
 		height: 5em;
 		font-size: var(--fs-h3);
-		padding: 0 4em;
+		padding: 0 3em;
+		.nav-items {
+			display: flex;
+			align-items: center;
+			input {
+				width: unset;
+				margin: 0;
+				padding: 0.8rem 4em;
+			}
+		}
+		a:nth-child(1) {
+			padding-left: 0;
+		}
 		a {
 			color: var(--clr-light);
 			padding: 0 2em;
@@ -112,7 +124,7 @@ a {
 		}
 	}
 	img {
-		width: 10%;
+		width: 9%;
 		margin-right: 4em;
 		display: flex;
 	}
@@ -202,6 +214,7 @@ label span {
 	border-radius: var(--bdr-radius);
 	-webkit-appearance: none;
 	margin-bottom: var(--mgn-btm-sm);
+	border: none;
 }
 
 span {
