--- a/src/styles.css
+++ b/src/styles.css
@@ -94,6 +94,7 @@ section {
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
+  margin-bottom: var(--mgn-btm-section);
 }
 
 .nav-container {
@@ -189,7 +190,6 @@ section {
 .signup-container {
   margin: 0 auto;
   width: 50vw;
-  margin-bottom: var(--mgn-btm-section);
 }
 
 .signup-container p {
@@ -225,7 +225,11 @@ section {
   width: 30vw;
 }
 
-.dive-sites-container {
+.dive-sites {
+  margin-bottom: var(--mgn-btm-section);
+}
+
+.dive-sites .dive-sites-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -234,14 +238,13 @@ section {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: var(--mgn-btm-section);
 }
 
-.dive-sites-container .site-card {
+.dive-sites .dive-sites-container .site-card {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 30%;
           flex: 0 1 30%;
-  margin-bottom: var(--mgn-btm-lg);
+  margin-bottom: var(--mgn-btm-md);
 }
 
 section > article {
