--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,7 @@ section {
 	height: 100vh;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin-bottom: var(--mgn-btm-section);
 }
 
 .nav-container {
@@ -160,7 +161,7 @@ section {
 .signup-container {
 	margin: 0 auto;
 	width: 50vw;
-	margin-bottom: var(--mgn-btm-section);
+	// margin-bottom: var(--mgn-btm-section);
 	p {
 		margin-bottom: 1.5em;
 	}
@@ -190,14 +191,16 @@ section {
 	width: 30vw;
 }
 
-.dive-sites-container {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+.dive-sites {
 	margin-bottom: var(--mgn-btm-section);
-	.site-card {
-		flex: 0 1 30%;
-		margin-bottom: var(--mgn-btm-lg);
+	.dive-sites-container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		.site-card {
+			flex: 0 1 30%;
+			margin-bottom: var(--mgn-btm-md);
+		}
 	}
 }
 
