--- a/src/styles.css
+++ b/src/styles.css
@@ -222,7 +222,8 @@ section {
   width: 30vw;
 }
 
-.hr-dive-gallery {
+.hr-dive-gallery,
+.hr-logged-dives {
   width: 30vw;
   -ms-flex-item-align: end;
       align-self: flex-end;
@@ -339,6 +340,15 @@ section {
   background-image: url("./images/gallery_img_6.jpg");
 }
 
+.logged-dives {
+  margin-bottom: var(--mgn-btm-section);
+}
+
+.logged-dives p {
+  color: var(--clr-accent);
+  margin-bottom: var(--mgn-btm-sm);
+}
+
 section > article {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -346,11 +356,7 @@ section > article {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  /* min-width: 15rem; */
-  /* color: white; */
   border-bottom: 1px solid var(--clr-accent);
-  /* margin: 0.1rem; */
-  /* background-color: #737495; */
 }
 
 article > div {
