--- a/src/styles.css
+++ b/src/styles.css
@@ -472,6 +472,48 @@ span {
   width: 100%;
   height: 100vh;
   background-size: cover;
-  background-repeat: no-repeat;
+}
+
+.footer-container {
+  padding: 0 10em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer-container .columns {
+  padding: var(--img-pad);
+  width: 33%;
+}
+
+.footer-container img {
+  margin-bottom: var(--mgn-btm-md);
+}
+
+.footer-container .title {
+  font-weight: var(--fw-bold);
+  margin-bottom: var(--mgn-btm-md);
+  color: var(--clr-light);
+}
+
+.footer-container hr {
+  margin-bottom: var(--mgn-btm-md);
+}
+
+.footer-container p {
+  color: var(--clr-accent);
+}
+
+.footer-container .email,
+.footer-container .phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=styles.css.map */
