--- a/src/styles.scss
+++ b/src/styles.scss
@@ -383,5 +383,34 @@ span {
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
-	background-repeat: no-repeat;
+	// background-repeat: no-repeat;
+}
+
+.footer-container {
+	padding: 0 10em;
+	display: flex;
+	justify-content: space-between;
+	.columns {
+		padding: var(--img-pad);
+		width: 33%;
+	}
+	img {
+		margin-bottom: var(--mgn-btm-md);
+	}
+	.title {
+		font-weight: var(--fw-bold);
+		margin-bottom: var(--mgn-btm-md);
+		color: var(--clr-light);
+	}
+	hr {
+		margin-bottom: var(--mgn-btm-md);
+	}
+	p {
+		color: var(--clr-accent);
+	}
+	.email,
+	.phone {
+		display: flex;
+		align-items: center;
+	}
 }
