Added turtle image to bg

--- a/src/styles.css
+++ b/src/styles.css
@@ -424,6 +424,13 @@ section {
       align-self: flex-end;
 }
 
+.turtle-image {
+  background-image: url("./images/turtle.png");
+  background-position: 20% 95%;
+  background-size: 35em;
+  background-repeat: no-repeat;
+}
+
 label {
   display: -webkit-box;
   display: -ms-flexbox;
