--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@
   --clr-accent-secondary: #ff0000;
   --clr-accent-secondary-drk: #920000;
   --transparent-nav: rgba(204, 0, 0, 0.6);
+  --transparent-nav-top: rgba(0, 14, 40, 0.6);
   --transparent-bg-drk: rgba(0, 14, 40, 1);
   --transparent-bg-light: rgba(0, 14, 40, 0);
   --clr-dark-bg: #000e28;
@@ -104,14 +105,43 @@ section {
 }
 
 .nav-container {
-  padding: 4em 0 6em 6em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 23em;
+  margin-bottom: 30em;
+}
+
+.nav-container .nav-top {
+  width: 100%;
+  height: 10em;
+  padding: 0;
+  background-color: var(--transparent-nav-top);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-container .nav-top p {
+  color: var(--clr-light);
+  font-weight: var(--fw-bold);
+}
+
+.nav-container .nav-top img {
+  width: 6%;
+  margin: 0 3em;
 }
 
 .nav-container .nav {
@@ -125,10 +155,10 @@ section {
       -ms-flex-pack: justify;
           justify-content: space-between;
   background-color: var(--transparent-nav);
-  width: 100%;
+  width: 85vw;
   height: 5em;
-  font-size: var(--fs-h3);
   padding: 0 3em;
+  font-size: var(--fs-h3);
 }
 
 .nav-container .nav .nav-items {
@@ -152,7 +182,8 @@ section {
 
 .nav-container .nav a {
   color: var(--clr-light);
-  padding: 0 2em;
+  padding: 0 1.5em;
+  font-weight: var(--fw-normal);
 }
 
 .nav-container .nav .nav-login {
@@ -166,12 +197,8 @@ section {
   text-transform: uppercase;
 }
 
-.nav-container img {
-  width: 9%;
-  margin-right: 4em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.nav-container .nav .nav-login a {
+  padding: 0;
 }
 
 .btn {
@@ -220,6 +247,7 @@ section {
 .vl {
   border-left: 1px solid var(--clr-light);
   height: 2.5em;
+  margin: 0 2em;
 }
 
 .hr {
