--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,7 @@
 	--clr-accent-secondary: #ff0000;
 	--clr-accent-secondary-drk: #920000;
 	--transparent-nav: rgba(204, 0, 0, 0.6);
+	--transparent-nav-top: rgba(0, 14, 40, 0.6);
 	--transparent-bg-drk: rgba(0, 14, 40, 1);
 	--transparent-bg-light: rgba(0, 14, 40, 0);
 	--clr-dark-bg: #000e28;
@@ -74,7 +75,6 @@ section {
 }
 
 .container {
-	// background-color: var(--clr-dark-bg);
 	width: 100vw;
 	display: flex;
 	flex-direction: column;
@@ -88,7 +88,6 @@ section {
 		),
 		url("./images/bg-top.jpg");
 	width: 100%;
-	// height: 100vh;
 	background-size: cover;
 	background-repeat: no-repeat;
 	margin-bottom: var(--mgn-btm-section);
@@ -101,19 +100,36 @@ section {
 }
 
 .nav-container {
-	padding: 4em 0 6em 6em;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	margin-bottom: 23em;
+	margin-bottom: 30em;
+	.nav-top {
+		width: 100%;
+		height: 10em;
+		padding: 0;
+		background-color: var(--transparent-nav-top);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		p {
+			color: var(--clr-light);
+			font-weight: var(--fw-bold);
+		}
+		img {
+			width: 6%;
+			margin: 0 3em;
+		}
+	}
 	.nav {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		background-color: var(--transparent-nav);
-		width: 100%;
+		width: 85vw;
 		height: 5em;
-		font-size: var(--fs-h3);
 		padding: 0 3em;
+		font-size: var(--fs-h3);
 		.nav-items {
 			display: flex;
 			align-items: center;
@@ -129,19 +145,18 @@ section {
 
 		a {
 			color: var(--clr-light);
-			padding: 0 2em;
+			padding: 0 1.5em;
+			font-weight: var(--fw-normal);
 		}
 		.nav-login {
 			display: flex;
 			align-items: center;
 			font-weight: var(--fw-semi);
 			text-transform: uppercase;
+			a {
+				padding: 0;
+			}
 		}
-	}
-	img {
-		width: 9%;
-		margin-right: 4em;
-		display: flex;
 	}
 }
 
@@ -168,7 +183,6 @@ section {
 .signup-container {
 	margin: 0 auto;
 	width: 50vw;
-	// margin-bottom: var(--mgn-btm-section);
 	p {
 		margin-bottom: 1.5em;
 	}
@@ -187,6 +201,7 @@ section {
 .vl {
 	border-left: 1px solid var(--clr-light);
 	height: 2.5em;
+	margin: 0 2em;
 }
 
 .hr {
@@ -223,7 +238,6 @@ section {
 
 .about {
 	margin-bottom: var(--mgn-btm-section);
-	// padding: 0 4em;
 	.h1 {
 		margin: 0;
 	}
