--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,7 +112,7 @@ section {
 		justify-content: center;
 		align-items: center;
 		p {
-			color: var(--clr-light);
+			color: var(--clr-accent);
 			font-weight: var(--fw-bold);
 		}
 		img {
@@ -356,7 +356,7 @@ section {
 
 .turtle-image {
 	background-image: url("./images/turtle.png");
-	background-position: 10% 65%;
+	background-position: 10% 74%;
 	background-size: 35em;
 	background-repeat: no-repeat;
 }
@@ -408,8 +408,8 @@ select {
 }
 
 span {
-	// text-transform: uppercase;
-	color: var(--clr-accent-dark);
+
+	color: var(--clr-accent);
 	font-weight: var(--fw-bold);
 }
 
@@ -418,7 +418,6 @@ span {
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
-	// background-repeat: no-repeat;
 }
 
 .footer-container {
