--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@
   --mgn-btm-lg: 2em;
   --mgn-btm-xlg: 3em;
   --mgn-btm-section: 9em;
+  --pad-btm-section: 9em;
   --fs-xl: 4rem;
   --bdr-radius: 0.3em;
   --bdr-radius-md: 1em;
@@ -93,7 +94,7 @@ section {
   background-position: 50% 25%;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-bottom: var(--mgn-btm-section);
+  padding-bottom: var(--pad-btm-section);
 }
 
 .header .search {
@@ -259,7 +260,9 @@ section {
 }
 
 .dive-sites {
-  margin-bottom: var(--mgn-btm-section);
+  padding-bottom: var(--pad-btm-section);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--transparent-bg-light)), to(var(--transparent-bg-drk)));
+  background-image: linear-gradient(var(--transparent-bg-light), var(--transparent-bg-drk));
 }
 
 .dive-sites .dive-sites-container {
@@ -295,7 +298,7 @@ section {
 }
 
 .about {
-  margin-bottom: var(--mgn-btm-section);
+  padding-bottom: var(--pad-btm-section);
 }
 
 .about .h1 {
@@ -316,7 +319,7 @@ section {
 }
 
 .images-gallery {
-  margin-bottom: var(--mgn-btm-section);
+  padding-bottom: var(--pad-btm-section);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -370,7 +373,9 @@ section {
 }
 
 .logged-dives {
-  margin-bottom: var(--mgn-btm-section);
+  padding-bottom: var(--pad-btm-section);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--transparent-bg-light)), to(var(--transparent-bg-drk)));
+  background-image: linear-gradient(var(--transparent-bg-light), var(--transparent-bg-drk));
 }
 
 .logged-dives article > div {
@@ -452,11 +457,15 @@ section {
   background-position: 10% 74%;
   background-size: 35em;
   background-repeat: no-repeat;
+  position: relative;
+  background-attachment: fixed;
 }
 
 .shark-image {
   background-image: url("./images/shark.png");
-  background-position: 100% 70%;
+  position: relative;
+  background-attachment: fixed;
+  background-position: 80% 40%;
   background-size: 30em;
   background-repeat: no-repeat;
 }
