Fixed image fading issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -261,8 +261,8 @@ section {
 
 .dive-sites {
   padding-bottom: var(--pad-btm-section);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--transparent-bg-light)), to(var(--transparent-bg-drk)));
-  background-image: linear-gradient(var(--transparent-bg-light), var(--transparent-bg-drk));
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--transparent-bg-drk)), color-stop(var(--transparent-bg-light)), to(var(--transparent-bg-drk)));
+  background-image: linear-gradient(var(--transparent-bg-drk), var(--transparent-bg-light), var(--transparent-bg-drk));
 }
 
 .dive-sites .dive-sites-container {
@@ -374,8 +374,8 @@ section {
 
 .logged-dives {
   padding-bottom: var(--pad-btm-section);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--transparent-bg-light)), to(var(--transparent-bg-drk)));
-  background-image: linear-gradient(var(--transparent-bg-light), var(--transparent-bg-drk));
+  background-image: -webkit-gradient(linear, left top, left bottom, from(var(--transparent-bg-drk)), color-stop(var(--transparent-bg-light)), to(var(--transparent-bg-drk)));
+  background-image: linear-gradient(var(--transparent-bg-drk), var(--transparent-bg-light), var(--transparent-bg-drk));
 }
 
 .logged-dives article > div {
@@ -452,10 +452,8 @@ section {
       align-self: flex-end;
 }
 
-.turtle-image {
-  background-image: url("./images/turtle.png");
-  background-position: 10% 74%;
-  background-size: 35em;
+.turtle-image,
+.shark-image {
   background-repeat: no-repeat;
   position: relative;
   background-attachment: fixed;
@@ -463,11 +461,14 @@ section {
 
 .shark-image {
   background-image: url("./images/shark.png");
-  position: relative;
-  background-attachment: fixed;
   background-position: 80% 40%;
   background-size: 30em;
-  background-repeat: no-repeat;
+}
+
+.turtle-image {
+  background-image: url("./images/turtle.png");
+  background-position: 10% 74%;
+  background-size: 35em;
 }
 
 label {
