Testing 3rd party API - Dive Sites

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -227,6 +227,10 @@ section {
       flex: 0 1 30%;
       margin-bottom: var(--mgn-btm-md);
     }
+    .dive-site-title {
+      font-weight: var(--fw-semi);
+      color: var(--clr-accent);
+    }
   }
 }
 
